[project]
name = "tulip_agent"
version = "0.2.9"
description = "autonomous agent with access to a tool library"
authors = [{ name = "Felix Ocker", email = "felix.ocker@honda-ri.de" }]
requires-python = ">=3.10.11,<4"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "autonomous agent",
    "agent",
    "tool use",
    "llm",
]
dependencies = [
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "matplotlib>=3.8.3",
    "scipy>=1.13.0",
    "docstring-parser>=0.16",
    "tiktoken>=0.7.0",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "networkx>=3.3",
    "ruff>=0.12.12",
]

[project.urls]
Homepage = "https://hri-eu.github.io/tulip_agent/"
Repository = "https://github.com/HRI-EU/tulip_agent"

[dependency-groups]
dev = [
    "pre-commit>=3.6.2,<4",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/tulip_agent",
    "src/eval",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/tulip_agent",
    "src/eval",
]

[tool.hatch.build.targets.wheel.sources]
"src/tulip_agent" = "tulip_agent"
"src/eval" = "eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]

[tool.ruff.lint]

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]
skip = [
    "src/eval/robo_eval/AttentiveSupport",
    ".venv"
]
lines_after_imports = 2
